manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo-blog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hugo-blog
  template:
    metadata:
      labels:
        app: hugo-blog
    spec:
      containers:
        - name: nginx
          image: m.daocloud.io/docker.io/library/nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: blog-content
              mountPath: /usr/share/nginx/html
      volumes:
        - name: blog-content
          persistentVolumeClaim:
            claimName: hugo-blog-pvc
