manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo-blog
spec:
  selector:
    app: hugo-blog
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
