manifests/ingress-port.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugo-blog
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: port.72602.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hugo-blog
                port:
                  number: 80
